--- a/order-confirmation.html
+++ b/order-confirmation.html
@@ -18,7 +18,7 @@
       <div class="header-container">
         <!-- Logo and Brand -->
         <div class="logo-section">
-          <a href="home.html" class="logo-link">
+          <a href="index.html" class="logo-link">
             <span class="brand-text">Little</span>
             <div class="logo-placeholder">
                 <img src="img/logo.png" width="100%" height="auto">
@@ -52,7 +52,7 @@
         <!-- Navigation -->
         <nav class="navigation">
           <div class="nav-links">
-            <a href="home.html" class="nav-link">Home</a>
+            <a href="index.html" class="nav-link">Home</a>
             <a href="about.html" class="nav-link">About</a>
             <a href="products.html" class="nav-link">Products</a>
             <a href="contact.html" class="nav-link">Contact</a>
@@ -66,7 +66,7 @@
         <h1 class="confirmation-title">Thank you!</h1>
         <p class="confirmation-message">Your order is confirmed.</p>
 
-        <a href="home.html" class="confirmation-back-link">Continue Shopping</a>
+        <a href="index.html" class="confirmation-back-link">Continue Shopping</a>
       </div>
     </main>
 
@@ -76,7 +76,7 @@
         <div class="footer-container">
           <!-- Logo and Brand -->
           <div class="footer-logo">
-            <a href="home.html" class="footer-logo-link">
+            <a href="index.html" class="footer-logo-link">
               <span class="footer-brand-text">Little</span>
               <div class="footer-logo-placeholder">
                 <img src="img/logo.png" width="100%" height="auto">
